Code cleanup and improved documentation. Upgraded to Java 21 for better performance and stability.